--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
+  "name": "package.json",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
   "dependencies": {
-    "express-handlebars": "3.1.0"
+    "express": "4.17.1",
+    "express-handlebars": "3.1.0",
+    "multer": "^1.4.4"
   }
 }
